[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
diesel = { version = "2.1.5", features = ["mysql", "time", "serde_json", "chrono"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0", features = ["json", "serde_json"] }
rocket_cors = "0.6.0"
